--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2054,4 +2054,16 @@
     <string name="corners_size">Kampų dydis</string>
     <string name="squircle">Squircle</string>
     <string name="squircle_shapes_sub">Elegantiški suapvalinti vartotojo sąsajos elementai</string>
+    <string name="filename_format">Failo vardo formatas</string>
+    <string name="prefix_pattern_description">Pasirinktinis tekstas, patalpintas pačioje failo pavadinimo pradžioje, puikiai tinka projektų pavadinimams, prekių ženklams ar asmeninėms žymoms.</string>
+    <string name="original_filename_pattern_description">Naudoja originalų failo pavadinimą be plėtinio, padedantį išlaikyti šaltinio identifikavimo duomenis.</string>
+    <string name="width_pattern_description">Vaizdo plotis pikseliais, naudingas stebint skiriamosios gebos pokyčius arba keičiant mastelio rezultatus.</string>
+    <string name="height_pattern_description">Vaizdo aukštis pikseliais, naudinga dirbant su formato koeficientu arba eksportuojant.</string>
+    <string name="formatted_timestamp_pattern_description">Pritaikoma laiko žyma, leidžianti nustatyti savo formatą, pvz., yyyy-MM-dd_HH-mm-ss, kad būtų tobulas rūšiavimas.</string>
+    <string name="random_numbers_pattern_description">Generuoja atsitiktinius skaitmenis, kad garantuotų unikalius failų pavadinimus; pridėkite daugiau skaitmenų, kad išvengtumėte dublikatų.</string>
+    <string name="sequence_number_pattern_description">Automatiškai didėjantis paketinio eksporto skaitiklis, idealiai tinka išsaugant kelis vaizdus per vieną sesiją.</string>
+    <string name="preset_info_pattern_description">Į failo pavadinimą įterpia pritaikytą išankstinio nustatymo pavadinimą, kad galėtumėte lengvai prisiminti, kaip buvo apdorotas vaizdas.</string>
+    <string name="scale_mode_pattern_description">Rodomas vaizdo mastelio keitimo režimas, naudojamas apdorojimo metu, padedantis atskirti pakeisto dydžio, apkarpytus ar pritaikytus vaizdus.</string>
+    <string name="suffix_pattern_description">Pasirinktinis tekstas, dedamas failo pavadinimo pabaigoje, naudingas kuriant versijas, pvz., _v2, _edited arba _final.</string>
+    <string name="extension_pattern_description">Failo plėtinys (png, jpg, webp ir kt.), automatiškai atitinkantis tikrąjį išsaugotą formatą.</string>
 </resources>
