--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2052,4 +2052,16 @@
     <string name="corners_size">කෝනර් ප්රමාණය</string>
     <string name="squircle">ලේනා</string>
     <string name="squircle_shapes_sub">අලංකාර වටකුරු UI මූලද්‍රව්‍ය</string>
+    <string name="filename_format">ගොනු නාමය ආකෘතිය</string>
+    <string name="prefix_pattern_description">ව්‍යාපෘති නම්, වෙළඳ නාම, හෝ පුද්ගලික ටැග් සඳහා පරිපූර්ණ, ගොනු නාමයේ ආරම්භයේම තබා ඇති අභිරුචි පෙළ.</string>
+    <string name="original_filename_pattern_description">මුල් ගොනු නාමය දිගුවකින් තොරව භාවිත කරයි, මූලාශ්‍ර හඳුනාගැනීම නොවෙනස්ව තබා ගැනීමට ඔබට උදවු කරයි.</string>
+    <string name="width_pattern_description">පික්සලවල රූපයේ පළල, විභේදන වෙනස්කම් හඹා යාමට හෝ ප්‍රතිඵල පරිමාණය කිරීමට ප්‍රයෝජනවත් වේ.</string>
+    <string name="height_pattern_description">පික්සලවල රූපයේ උස, දර්ශන අනුපාත හෝ අපනයන සමඟ වැඩ කිරීමේදී උපකාරී වේ.</string>
+    <string name="formatted_timestamp_pattern_description">පරිපූර්ණ වර්ග කිරීම සඳහා yyyy-MM-dd_HH-mm-ss වැනි ඔබේම ආකෘතිය නිර්වචනය කිරීමට ඔබට ඉඩ සලසන අභිරුචිකරණය කළ හැකි වේලා මුද්දරයක්.</string>
+    <string name="random_numbers_pattern_description">අද්විතීය ගොනු නාම සහතික කිරීම සඳහා අහඹු ඉලක්කම් ජනනය කරයි; අනුපිටපත් වලට එරෙහිව අමතර ආරක්ෂාවක් සඳහා තවත් ඉලක්කම් එකතු කරන්න.</string>
+    <string name="sequence_number_pattern_description">කණ්ඩායම් නිර්යාත සඳහා ස්වයංක්‍රීය වර්ධක කවුන්ටරය, එක් සැසියක පින්තූර කිහිපයක් සුරැකීමේදී වඩාත් සුදුසුය.</string>
+    <string name="preset_info_pattern_description">රූපය සැකසූ ආකාරය ඔබට පහසුවෙන් මතක තබා ගත හැකි වන පරිදි ගොනු නාමයට යොදන ලද පෙරසැකසුම් නාමය ඇතුළත් කරයි.</string>
+    <string name="scale_mode_pattern_description">ප්‍රතිප්‍රමාණ කළ, කපන ලද, හෝ සවි කළ රූප වෙන්කර හඳුනා ගැනීමට උදවු කරමින්, සැකසීමේදී භාවිත කරන ලද රූප පරිමාණ ප්‍රකාරය සංදර්ශන කරයි.</string>
+    <string name="suffix_pattern_description">අභිරුචි පෙළ ගොනු නාමයේ අවසානයේ තබා ඇත, _v2, _edited, හෝ _final වැනි අනුවාද සඳහා ප්‍රයෝජනවත් වේ.</string>
+    <string name="extension_pattern_description">ගොනු දිගුව (png, jpg, webp, ආදිය), සත්‍ය සුරැකි ආකෘතියට ස්වයංක්‍රීයව ගැලපේ.</string>
 </resources>
