--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2055,4 +2055,16 @@
     <string name="corners_size">حجم الزوايا</string>
     <string name="squircle">سكويركل</string>
     <string name="squircle_shapes_sub">عناصر واجهة المستخدم مدورة أنيقة</string>
+    <string name="filename_format">تنسيق اسم الملف</string>
+    <string name="prefix_pattern_description">نص مخصص يتم وضعه في بداية اسم الملف، وهو مثالي لأسماء المشاريع أو العلامات التجارية أو العلامات الشخصية.</string>
+    <string name="original_filename_pattern_description">يستخدم اسم الملف الأصلي بدون امتداد، مما يساعدك على الحفاظ على تعريف المصدر سليمًا.</string>
+    <string name="width_pattern_description">عرض الصورة بالبكسل، مفيد لتتبع تغييرات الدقة أو قياس النتائج.</string>
+    <string name="height_pattern_description">يعد ارتفاع الصورة بالبكسل مفيدًا عند العمل مع نسب العرض إلى الارتفاع أو الصادرات.</string>
+    <string name="formatted_timestamp_pattern_description">طابع زمني قابل للتخصيص يتيح لك تحديد التنسيق الخاص بك مثل yyyy-MM-dd_HH-mm-ss للحصول على فرز مثالي.</string>
+    <string name="random_numbers_pattern_description">يولد أرقام عشوائية لضمان أسماء ملفات فريدة من نوعها؛ أضف المزيد من الأرقام لمزيد من الأمان ضد التكرارات.</string>
+    <string name="sequence_number_pattern_description">عداد متزايد تلقائيًا لصادرات الدُفعات، وهو مثالي عند حفظ صور متعددة في جلسة واحدة.</string>
+    <string name="preset_info_pattern_description">يقوم بإدراج اسم الإعداد المسبق المطبق في اسم الملف حتى تتمكن من تذكر كيفية معالجة الصورة بسهولة.</string>
+    <string name="scale_mode_pattern_description">يعرض وضع تغيير حجم الصورة المستخدم أثناء المعالجة، مما يساعد على تمييز الصور التي تم تغيير حجمها أو اقتصاصها أو تركيبها.</string>
+    <string name="suffix_pattern_description">نص مخصص يتم وضعه في نهاية اسم الملف، وهو مفيد لإصدارات مثل _v2، أو _edited، أو _final.</string>
+    <string name="extension_pattern_description">امتداد الملف (png، jpg، webp، وما إلى ذلك)، يطابق تلقائيًا التنسيق الفعلي المحفوظ.</string>
 </resources>
