--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2053,4 +2053,16 @@
     <string name="corners_size">Rozmiar narożników</string>
     <string name="squircle">Wiercik</string>
     <string name="squircle_shapes_sub">Eleganckie zaokrąglone elementy interfejsu użytkownika</string>
+    <string name="filename_format">Format nazwy pliku</string>
+    <string name="prefix_pattern_description">Niestandardowy tekst umieszczany na samym początku nazwy pliku, idealny do nazw projektów, marek lub osobistych tagów.</string>
+    <string name="original_filename_pattern_description">Używa oryginalnej nazwy pliku bez rozszerzenia, pomagając zachować nienaruszoną identyfikację źródła.</string>
+    <string name="width_pattern_description">Szerokość obrazu w pikselach, przydatna do śledzenia zmian rozdzielczości lub wyników skalowania.</string>
+    <string name="height_pattern_description">Wysokość obrazu w pikselach, pomocna podczas pracy ze współczynnikami proporcji lub eksportami.</string>
+    <string name="formatted_timestamp_pattern_description">Konfigurowalny znacznik czasu, który pozwala zdefiniować własny format, np. rrrr-MM-dd_HH-mm-ss, w celu idealnego sortowania.</string>
+    <string name="random_numbers_pattern_description">Generuje losowe cyfry, aby zagwarantować unikalne nazwy plików; dodaj więcej cyfr, aby zapewnić dodatkowe bezpieczeństwo przed duplikatami.</string>
+    <string name="sequence_number_pattern_description">Automatycznie zwiększający się licznik do eksportu wsadowego, idealny przy zapisywaniu wielu obrazów w jednej sesji.</string>
+    <string name="preset_info_pattern_description">Wstawia zastosowaną nazwę ustawienia wstępnego do nazwy pliku, dzięki czemu można łatwo zapamiętać sposób przetwarzania obrazu.</string>
+    <string name="scale_mode_pattern_description">Wyświetla tryb skalowania obrazu używany podczas przetwarzania, pomagając rozróżnić obrazy o zmienionym rozmiarze, przycięte lub dopasowane.</string>
+    <string name="suffix_pattern_description">Niestandardowy tekst umieszczony na końcu nazwy pliku, przydatny przy wersjonowaniu, takim jak _v2, _edited lub _final.</string>
+    <string name="extension_pattern_description">Rozszerzenie pliku (png, jpg, webp itp.), automatycznie dopasowujące się do aktualnie zapisanego formatu.</string>
 </resources>
