--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -2051,4 +2051,16 @@
     <string name="corners_size">Köşe Boyutu</string>
     <string name="squircle">sincap</string>
     <string name="squircle_shapes_sub">Zarif yuvarlak kullanıcı arayüzü öğeleri</string>
+    <string name="filename_format">Dosya Adı Formatı</string>
+    <string name="prefix_pattern_description">Dosya adının en başına yerleştirilen özel metin; proje adları, markalar veya kişisel etiketler için mükemmeldir.</string>
+    <string name="original_filename_pattern_description">Orijinal dosya adını uzantısız olarak kullanarak kaynak kimliğini olduğu gibi korumanıza yardımcı olur.</string>
+    <string name="width_pattern_description">Çözünürlük değişikliklerini izlemek veya sonuçları ölçeklendirmek için yararlı olan piksel cinsinden görüntü genişliği.</string>
+    <string name="height_pattern_description">Görüntünün piksel cinsinden yüksekliği, en boy oranlarıyla veya dışa aktarmalarla çalışırken faydalıdır.</string>
+    <string name="formatted_timestamp_pattern_description">Mükemmel sıralama için yyyy-AA-gg_HH-aa-ss gibi kendi biçiminizi tanımlamanıza olanak tanıyan özelleştirilebilir bir zaman damgası.</string>
+    <string name="random_numbers_pattern_description">Benzersiz dosya adlarını garanti etmek için rastgele rakamlar üretir; kopyalara karşı ekstra güvenlik için daha fazla rakam ekleyin.</string>
+    <string name="sequence_number_pattern_description">Toplu dışa aktarmalar için otomatik artan sayaç, tek oturumda birden fazla görüntüyü kaydederken idealdir.</string>
+    <string name="preset_info_pattern_description">Uygulanan ön ayar adını dosya adına ekler, böylece görüntünün nasıl işlendiğini kolayca hatırlayabilirsiniz.</string>
+    <string name="scale_mode_pattern_description">İşleme sırasında kullanılan görüntü ölçeklendirme modunu görüntüleyerek yeniden boyutlandırılan, kırpılan veya takılan görüntülerin ayırt edilmesine yardımcı olur.</string>
+    <string name="suffix_pattern_description">Dosya adının sonuna yerleştirilen ve _v2, _edited veya _final gibi sürüm oluşturma için yararlı olan özel metin.</string>
+    <string name="extension_pattern_description">Gerçek kaydedilen formatla otomatik olarak eşleşen dosya uzantısı (png, jpg, webp vb.).</string>
 </resources>
